class GetTranslatedPhrasePayload {
  final String inputPhrase;
  final String userId;

  GetTranslatedPhrasePayload({
    required this.inputPhrase,
    required this.userId,
  });
}
