class UserAuthPayload {
  final String email;
  final String password;
  UserAuthPayload({
    required this.email,
    required this.password,
  });
}